--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 .img-2 {
   height: 90vh;
-  background-image: url(/002-parallax-website/img/bg2.jpg);
+  background-image: url(./002-parallax-website/img/bg2.jpg);
 }
 
 .img-2 .clarusway img {
